--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-three/csg": "^3.2.0",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
+    "@react-three/rapier": "^1.3.0",
     "@react-three/xr": "^5.7.1",
     "leva": "^0.9.35",
+    "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.161.0"
