--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.161.0"
+    "three": "^0.161.0",
+    "three-pathfinding": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
